force-app/main/default/objects/RE_Gain_Loss_Audit__c/RE_Gain_Loss_Audit__c.object-meta.xml
<CustomObject>
    <label>Gain Loss Audit</label>
    <nameField>
        <displayFormat>GLA-{0000000}</displayFormat>
        <label>Gain Loss Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gain Loss Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>