force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_Month__c.field-meta.xml
<CustomField>
    <fullName>RE_Month__c</fullName>
    <label>Month</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Jan</fullName>
            </value>
            <value>
                <fullName>Feb</fullName>
            </value>
            <value>
                <fullName>Mar</fullName>
            </value>
            <value>
                <fullName>Apr</fullName>
            </value>
            <value>
                <fullName>May</fullName>
            </value>
            <value>
                <fullName>Jun</fullName>
            </value>
            <value>
                <fullName>Jul</fullName>
            </value>
            <value>
                <fullName>Aug</fullName>
            </value>
            <value>
                <fullName>Sep</fullName>
            </value>
            <value>
                <fullName>Oct</fullName>
            </value>
            <value>
                <fullName>Nov</fullName>
            </value>
            <value>
                <fullName>Dec</fullName>
            </value>
            <value>
                <fullName>July</fullName>
                <isActive>false</isActive>
                <label>July</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>