force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_MonthlyAverage__c.field-meta.xml
<CustomField>
    <fullName>RE_MonthlyAverage__c</fullName>
    <label>M-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>