force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_MOPS_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_MOPS_Name__c</fullName>
    <label>MOPS Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>