force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_MTD__c.field-meta.xml
<CustomField>
    <fullName>RE_MTD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MTD</label>
    <referenceTo>RE_Gain_Loss_Audit__c</referenceTo>
    <relationshipLabel>Gain Loss Audit</relationshipLabel>
    <relationshipName>Gain_Loss_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>