force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_Published_Date__c.field-meta.xml
<CustomField>
    <fullName>RE_Published_Date__c</fullName>
    <label>Published Date</label>
    <type>Date</type>
</CustomField>