force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>RE_Quote_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Name</label>
    <referenceTo>RE_Market_Quotes__c</referenceTo>
    <relationshipLabel>Gain Loss Audit</relationshipLabel>
    <relationshipName>Gain_Loss_Audit</relationshipName>
    <type>Lookup</type>
</CustomField>