force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_Type__c.field-meta.xml
<CustomField>
    <fullName>RE_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>W-1</fullName>
            </value>
            <value>
                <fullName>M-1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>