force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_W_1__c.field-meta.xml
<CustomField>
    <fullName>RE_W_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Week - 1</label>
    <referenceTo>RE_Gain_Loss_Audit__c</referenceTo>
    <relationshipLabel>Gain Loss Audit (W-1)</relationshipLabel>
    <relationshipName>Gain_Loss_Audit1</relationshipName>
    <type>Lookup</type>
</CustomField>