force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_Week_Number__c.field-meta.xml
<CustomField>
    <fullName>RE_Week_Number__c</fullName>
    <label>Week Number</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Week 1</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Week 2</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Week 3</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Week 4</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Week 5</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Week 6</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>