force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_WeekAverage__c.field-meta.xml
<CustomField>
    <fullName>RE_WeekAverage__c</fullName>
    <label>W-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>