force-app/main/default/objects/RE_Gain_Loss_Audit__c/fields/RE_Weeks_AVG__c.field-meta.xml
<CustomField>
    <fullName>RE_Weeks_AVG__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Weeks</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>