force-app/main/default/objects/RE_Gain_Loss_Audit__c/recordTypes/Thailand.recordType-meta.xml
<RecordType>
    <fullName>Thailand</fullName>
    <active>true</active>
    <label>Thailand</label>
</RecordType>