force-app/main/default/objects/RE_Gain_Loss_Audit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RE_Month__c</columns>
    <columns>RE_MOPS_Name__c</columns>
    <columns>RE_MTD__c</columns>
    <columns>RE_Price__c</columns>
    <columns>RE_Published_Date__c</columns>
    <columns>RE_Quote_Name__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>RE_Type__c</columns>
    <columns>RE_Year__c</columns>
    <columns>RE_Week_Number__c</columns>
    <columns>RE_WeekAverage__c</columns>
    <columns>RE_W_1__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>